--- a/templates/home.html
+++ b/templates/home.html
@@ -153,7 +153,7 @@
             </div>
 
             <!-- Food -->
-            <div class="scard">
+            <div class="scard" >
                 <div class="scard-icon">
                     <i class="fas fa-utensils"></i>
                 </div>
@@ -161,17 +161,19 @@
                 <p>Enjoy local flavors, traditional dishes, and hidden food spots.</p>
             </div>
 
-            <!-- AI Planner -->
-            <div class="scard">
+            <!-- Hotels -->
+            <div class="scard" onclick="window.location.href='{% url 'hotels' %}'">
                 <div class="scard-icon">
-                    <i class="fas fa-robot"></i>
+                    <i class="fas fa-hotel"></i>
                 </div>
-                <h3>AI Planner</h3>
-                <p>Let AI build your personalized itinerary in seconds.</p>
+                <h3>Hotels</h3>
+                <p>Find your ideal hotel match for any destination instantly.</p>
             </div>
         </div>
     </div>
 </div>
+<!--for hotels script-->
+
 <!-- Service End -->
 
 <!-- destination start -->
